app/assets/stylesheets/_layout.scss
div#yale-banner {
  padding-left: 40px;
  padding-right: 30px;
  padding-top: 10px;
  padding-bottom: 10px;

  div.title {
    padding-top: 10px;
    font-size: 28pt;
  }

  div.search-form {
    padding: 10px;
    padding-top: 10px;
    text-align: right;
    form {
      width: 100%;
      input.search-control {
        width: 75%;
      }
    }
  }
}

div.layout.navbar {
  border-radius: 0px;
  min-height: initial;

  .navbar-nav > li > a {
    padding-top: 14px;
    padding-bottom: 14px;
  }

}

div#scrollspy {
  position: relative;

  div.controls {
    background-color: #fff;

    &.affix-top {
      position: absolute;
      top: 0px;
    }

    &.affix {
      position: fixed;
      top: 0px;
      opacity: 0.85;
      border-top: 0px;
      z-index: 1000;
    }

  }

  div.films-spacer,
  div.events-spacer {
    height: 85px;
  }

  @media (max-width: 992px) {
    div.events-spacer {
      height: 200px;
    }
  }

  @media (max-width: 768px) {
    div.events-spacer {
      height: 255px;
    }
  }

  @media (max-width: 670px) {
    div.films-spacer {
      height: 120px;
    }
  }

}

div.layout.footer {
  border-top: 1px solid #2E3F4F;
  background-color: #fff;
  color: #aaa;
  margin-top: 20px;
  padding: 18px 0px;

  div.yale-font {
    font-size: 24pt;
    color: #2E3F4F;
  }

}

div.container {
  
  div.controls {
    padding: 20px;
    border-top: 1px solid #aaa;
    border-bottom: 1px solid #aaa;
    margin-bottom: 40px;
  }

  div.controls.unpadded {
    margin-bottom: 0px;
  }

  div.row.grid {
    padding: 20px;
    padding-bottom: 40px;
    & > div {
      padding-bottom: 20px;
    }
  }

}

.best-in-place-control {
  display: inline;
}

input[type=file].form-control {
  height: auto;
}

.btn-xs {
  margin-bottom: 5px;
}

.label {
  line-height: 1.7em;
}

